# robot-inference

./: .gitignore  Makefile  README.md  config.mk.example  local-proxy.js  pyproject.toml  runner.py
.docs/: unitreerobotics-reference.md
bridge/: mqtt.py
configs/: g1.yaml  go2.yaml  go2_sim.yaml  mock.yaml
dashboard/: index.html  robot.js
docker/: docker-compose.yml  mosquitto.conf
robots/: base.py  mock.py
robots/unitree/: g1.py  go2.py
sims/: mock.py  mujoco.py
